# ICP-598

./: .gitignore  CMakeLists.txt  README.md
include/: gradient_descent.h  icp.h  matcher.h
src/: gradient_descent.cpp  icp.cpp  main.cpp  matcher.cpp  quick_tests.cpp
